Update and rename lec01_basic_model_회귀.ipynb to Basic_model_Regression.ipynb

--- a/Basic_model_Regression.ipynb
+++ b/Basic_model_Regression.ipynb
@@ -5,7 +5,7 @@
    "id": "5ac9c037-e7cf-462f-a1a0-b6e95a84f303",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec01. 딥러닝 기초"
+    "<font size=6><b> DL-Regression"
    ]
   },
   {
