--- a/Housing_Price_Prediction(Regression).ipynb
+++ b/Housing_Price_Prediction(Regression).ipynb
@@ -5,7 +5,7 @@
    "id": "8ed33f16-f17e-435b-91bf-f7f963675885",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec02. 딥러닝 기초(회귀)"
+    "<font size=6><b> Kaggle Housing_Price_Prediction(Regression)"
    ]
   },
   {
