Update and rename lec06_이미지증강_lkh.ipynb to Image Augmentation.ipynb

--- a/Image Augmentation.ipynb
+++ b/Image Augmentation.ipynb
@@ -5,7 +5,7 @@
    "id": "ac35faa5-bb50-4fbe-bccf-435628bc628f",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec06. 이미지증강(Image Augmentation)"
+    "<font size=6><b> 이미지증강(Image Augmentation)"
    ]
   },
   {
