--- a/CNN.ipynb
+++ b/CNN.ipynb
@@ -5,7 +5,7 @@
    "id": "d198a0bf-4d9e-4279-bd22-84a4a4960d46",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec05. 합성곱신경망(CNN:Convolution NN)"
+    "<font size=6><b> 합성곱신경망(CNN:Convolution NN)"
    ]
   },
   {
