Update and rename lec041_reshape_lkh.ipynb to Reshape Function(Practice).ipynb

--- a/Reshape Function(Practice).ipynb
+++ b/Reshape Function(Practice).ipynb
@@ -5,7 +5,7 @@
    "id": "ef65b2e6-7c6e-48c2-9fec-fd67c39efe63",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec04. reshape\n",
+    "<font size=6><b> Reshape Function(Practice)\n",
     "<pre>\n",
     "* 데이터 구조(유형)\n",
     "    * 스칼라(scalar) : 한개의 숫자\n",
