Update and rename lec03_01basic_model_이미지mnist_lkh.ipynb to DL-Image(MNIST Dataset).ipynb

--- a/DL-Image(MNIST Dataset).ipynb
+++ b/DL-Image(MNIST Dataset).ipynb
@@ -5,7 +5,7 @@
    "id": "f954c3b0-a025-468c-99d0-e83bb3c09629",
    "metadata": {},
    "source": [
-    "<font size=6><b> Lec03. 딥러닝 기초(이미지)"
+    "<font size=6><b> DL-Image(MNIST Dataset)"
    ]
   },
   {
