Update and rename lec07_이미지증강_catdog_lkh.ipynb to Image_Augmentation (Cat_Dog dataset).ipynb

--- a/Image_Augmentation (Cat_Dog dataset).ipynb
+++ b/Image_Augmentation (Cat_Dog dataset).ipynb
@@ -5,7 +5,7 @@
    "id": "f198ea06-b046-4e6d-88c0-a84ac5e37fd4",
    "metadata": {},
    "source": [
-    "<font size=6><b>Lec07.[실습] 이미지 분류(cat dog)"
+    "<font size=6><b>Image_Augmentation (Cat_Dog dataset)"
    ]
   },
   {
